Fix tooltip component in dark mode

--- a/axelor-front/src/components/tooltip/tooltip.module.scss
+++ b/axelor-front/src/components/tooltip/tooltip.module.scss
@@ -5,10 +5,12 @@
 }
 
 .title {
-  background-color: rgba(0, 0, 0, 0.025);
   padding: 0.5rem;
   margin: 0;
   font-weight: 600;
+  background-color: var(--bs-tertiary-bg);
+  border-top-left-radius: var(--bs-border-radius);
+  border-top-right-radius: var(--bs-border-radius);
 }
 
 .content {
